# street-side

./: .gitignore  README.md
configuration/: docker_only_ecc_production.json  docker_production.json
local-development/: Makefile  docker-compose.yaml  local.env
street-side-api/: pyproject.toml
street-side-api/database/migrations/: 000001_v1_api.down.sql  000001_v1_api.up.sql  000002_add_updated_at.down.sql  000002_add_updated_at.up.sql
street-side-api/docker/: Dockerfile  Makefile  dev-entrypoint.sh  docker-compose.yaml  docker-entrypoint.sh  docker_build.sh
street-side-api/street_side_api/: log_config.json  main.py
street-side-api/street_side_api/app/: factory.py  health.py
street-side-api/street_side_api/app/logging/: json.py  serializer.py
street-side-api/street_side_api/app/v1/data/: company.py  document_types.py  documents.py
street-side-api/street_side_api/app/v1/methods/: data.py  name.py
street-side-api/street_side_api/app/v1/routing/: router.py
street-side-api/street_side_api/app/v1/routing/endpoints/: data.py  name.py  sleep.py
street-side-data-models/: README.md  pyproject.toml
street-side-data-models/street_side/v1/data_models/: base.py  company.py  configuration.py  document.py  document_type.py  excel.py  response.py  web.py
street-side-data-models/street_side_data_models/v1/: __init__.py  document.py  name.py
street-side-frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
street-side-frontend/api/: constants.ts  constants.tsx  health.ts
street-side-frontend/api/v1/: company.ts  document.ts  downloadFile.ts  name.ts  sleep.ts  useCompanies.ts  useCompanyDocumentTypes.ts  useDocuments.ts  useExcelFile.ts  useFile.ts
street-side-frontend/app/: globals.css  layout.tsx  page.tsx
street-side-frontend/app/components/: CompanySelector.tsx  DocumentSelector.tsx  DropDownList.tsx  NavigationHeader.tsx
street-side-frontend/app/components/loading/: LoadingCompanySelector.tsx  LoadingDocument.tsx  LoadingDocumentSelector.tsx  LoadingDownloadPeriodComponent.tsx
street-side-frontend/app/home/: inLineListOfCompanies.tsx  page.tsx
street-side-frontend/app/raw/: DownloadFileButton.tsx  DropDownCompanies.tsx  DropDownDocumentTypes.tsx  DropDownDocuments.tsx  File.tsx  FileExcel.tsx  FileNotSupported.tsx  FilePDF.tsx  FileZIP.tsx  loading.tsx  page.tsx
street-side-frontend/app/raw/components/: CompanySelector.tsx  Document.tsx  DownloadPeriodComponent.tsx  Selector.tsx
street-side-frontend/app/raw/components/loading/: LoadingCompanySelector.tsx  LoadingDocument.tsx  LoadingDocumentSelector.tsx  LoadingDownloadPeriodComponent.tsx
street-side-frontend/app/types/: company.tsx  document.tsx  document_type.tsx  excel_file.tsx
street-side-frontend/docker/: Dockerfile  dev-entrypoint.sh  docker_build.sh  docker_run.sh  prod-entrypoint.sh
street-side-scrapper/: pyproject.toml
street-side-scrapper/configurations/: all.json  nasdaq.json
street-side-scrapper/docker/: Dockerfile  build_docker.sh  dev-entrypoint.sh  docker_build.sh  docker_run.sh  run_docker.sh
street-side-scrapper/street-side-scrapper/core/: configuration.py  main.py  web.py
street-side-scrapper/street-side-scrapper/websites/: ecc_only.json  websites.json
street-side-scrapper/street_side/v1/scrapper/configurations/: ecc_only.json  test.json
street-side-scrapper/street_side/v1/scrapper/core/: configuration.py  main.py  test.py  web.py
street-side-scrapper/street_side/v1/scrapper/websites/: bme.py  cboe.py  ccpa.py  cme_group.py  ecc.py  eurex.py  ice.py  ice_credit.py  ice_eu.py  ice_us.py  kdpw.py  lch_ltd.py  lch_sa.py  lme.py  nasdaq.py  test.py  utils.py
street-side-storage/: README.md  pyproject.toml
street-side-storage/street-side-storage/: disk_storage.py  fetch.py  interface.py  put.py  utils.py
street-side-storage/street_side/v1/repositories/: company.py  document.py  document_type.py  pool.py
street-side-storage/street_side/v1/storage/: disk_storage.py  document_storage.py  utils.py
