[tool.poetry]
name = "street-side-scrapper"
version = "0.0.1"
description = ""
authors = ["VldKnd <kondratyev.w.i@gmail.com>"]
readme = "README.md"
packages = [{ include = "street-side-scrapper" }]

[tool.poetry.dependencies]
python = "~3.11.3"
requests = "^2.31.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
pydantic = "^2.4.0"
street-side-data-models = { path = "../street-side-data-models" }
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
